Global api,  markers and businessItems added

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.19.2",
+    "axios": "^1.6.5",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "react": "^18",
